# projects

./: README.md
automine/: README.md  automation.py  config.py  controls.py  logic.py  main.py  pyproject.toml  ui.py
maze-image-gen/: .gitignore  Makefile  README.md  main.cpp
