[tool.poetry]
name = "automine"
version = "0.1.0"
description = "Minesweeper with some automation"
authors = ["Juho Röyskö <roysko.juho@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
